--- a/styles.css
+++ b/styles.css
@@ -231,6 +231,7 @@ td button:first-child:hover {
     tr {
         margin-bottom: 15px;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        border-radius: 5px;
+        border-radius: 4px;
+        padding: 10px;
     }
 }
