--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: #f4f4f9;
     margin: 0;
     padding: 20px;
-    padding-bottom: 125px;
+    margin-bottom: 125px;
 }
 
 h1 {
