--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,7 @@ td button:first-child:hover {
         align-items: center;
         height: 50px;
         z-index: 1000;
+        box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
     }
 
     .bottom-nav-mobile .nav-item {
