--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,8 @@ td button:first-child:hover {
         display: flex;
         position: fixed;
         bottom: 0;
+        left: 0;
+        right: 0;
         width: 100%;
         background-color: #FFF;
         justify-content: center;
