--- a/styles.css
+++ b/styles.css
@@ -307,23 +307,28 @@ button.save-button:hover {
 }
 
 /* Add Chassis Button for Desktop */
-.add-button-desktop {
+.bottom-nav-desktop {
     display: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    background-color: #FFF;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
-    background-color: #007bff;
-    color: white;
+    height: 50px;
+    z-index: 1000;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.bottom-nav-desktop .nav-item {
+    color: #333;
     font-size: 24px;
-    position: relative;
-    margin: 20px auto;
-    cursor: pointer;
-    border-radius: 5px;
 }
 
 @media (min-width: 768px) {
-    .add-button-desktop {
+    .bottom-nav-desktop {
         display: flex;
     }
 
