--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,19 @@ button:hover {
     width: 80%;
     max-width: 500px;
     box-sizing: border-box;
+    position: relative;
+}
+
+.popup-content #close-overview-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #dc3545;
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 form label {
