--- a/styles.css
+++ b/styles.css
@@ -388,8 +388,9 @@ button.save-button:hover {
     .popup-content th {
         display: table-cell;
         width: 100%;
-        padding: 0.36em;
+        padding: 0.61em;
         font-size: 15px;
+        min-width: 1em;
     }
 
     .popup-content td {
@@ -397,6 +398,7 @@ button.save-button:hover {
         width: 100%;
         padding: 0.89em;
         font-size: 14px;
+        min-width: 1em;
     }
 
     .popup-content td:before {
